<resources>
    <string name="app_name">Hiker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_history">History</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_gallery">Gallery</string>
    <string name="your_hiking_history">Your hiking history</string>
    <string name="name_of_the_hike">Name of the hike <font color='#FF0000'>*</font></string>
    <string name="hiking_date">Hiking Date <font color='#FF0000'>*</font></string>
    <string name="create_new_hike">Create new hike </string>
    <string name="location">Location <font color='#FF0000'>*</font></string>
    <string name="parking_available">Parking Available <font color='#FF0000'>*</font></string>
    <string name="length_of_the_hike">Length of the hike <font color='#FF0000'>*</font></string>
    <string name="difficulty_level">Difficulty Level <font color='#FF0000'>*</font></string>
    <string name="description">Description  <font color='#FF0000'>*</font></string>
    <string name="description_hint">Description</string>
    <string name="add">Add</string>
    <string name="new_hiking">New Hiking</string>
    <string name="name_of_the_hike_label">Name of the hike: </string>
    <string name="hiking_date_label">Hiking Date: </string>
    <string name="hiking_length_label">Hiking Length: </string>
    <string name="hiking_level_label">Hiking Level: </string>
    <string name="description_label">Description: </string>
    <string name="location_label">Location: </string>
    <string name="parking_label">Parking: </string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="hiking_route">Hiking route</string>
    <string name="choose_with_map">Choose with map</string>
    <string name="submit_location_and_route">Submit Location and Route</string>
    <string name="please_check_if_you_want_to_change_content">Please check if you want to change content</string>
    <string name="add_new_waypoint">Add New Waypoint</string>
    <string name="length">Length:</string>
    <string name="plan_new_hike">Plan new hike</string>
    <string name="status">Status: </string>
    <string name="re_new">Re-new</string>
</resources>
