<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/history_card_style"
    android:layout_margin="5dp"
    android:elevation="10dp">
    <LinearLayout
        android:layout_margin="10dp"
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/row_hiking_list"
            android:orientation="horizontal">
            <TextView
                android:background="@drawable/label_hiking_list"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_hike_label"/>
            <TextView
                android:id="@+id/hiking_name"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:background="@drawable/row_hiking_list"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:background="@drawable/label_hiking_list"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiking_date_label" />

            <TextView
                android:id="@+id/hiking_date"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:background="@drawable/row_hiking_list"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:background="@drawable/label_hiking_list"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_label" />

            <TextView
                android:id="@+id/hiking_location"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:background="@drawable/row_hiking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:background="@drawable/label_hiking_list"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:id="@+id/hiking_status"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/status"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:background="@drawable/row_hiking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/hiding_panel"
            android:visibility="visible">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:background="@drawable/label_hiking_list"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parking_label" />

                    <TextView
                        android:id="@+id/hiking_park"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:background="@drawable/label_hiking_list"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hiking_length_label" />

                    <TextView
                        android:id="@+id/hiking_length"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:scrollHorizontally="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:background="@drawable/label_hiking_list"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hiking_level_label" />

                    <TextView
                        android:id="@+id/hiking_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:scrollHorizontally="true"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:background="@drawable/description_hiking_list"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label"/>
                <TextView
                    android:background="@drawable/description_val_list"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hiking_description"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/waypoint_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Waypoints"/>

            </LinearLayout>
            <LinearLayout
                android:padding="5dp"
                android:background="@drawable/row_hiking_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textColor="#FF000000"
                    android:textAllCaps="false"
                    app:iconGravity="textStart"
                    android:background="@android:color/transparent"
                    app:icon="@drawable/baseline_edit_24"
                    app:iconTint="#FF119911"
                    android:layout_weight="1"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:iconGravity="textStart"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="#FF000000"
                    android:background="@android:color/transparent"
                    app:iconTint="#FF991111"
                    app:icon="@drawable/baseline_delete_sweep_24"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




</androidx.cardview.widget.CardView>