<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/submit_title"
                android:layout_marginHorizontal="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_location_and_route" />

            <TextView
                android:id="@+id/submit_sub_title"
                android:layout_marginHorizontal="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_check_if_you_want_to_change_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        app:expandedHintEnabled="false"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/location_label">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:id="@+id/location_check"/>
                    </LinearLayout>

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Waypoint"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/check_panel"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        app:expandedHintEnabled="false"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/length">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:id="@+id/length_check"/>
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="end">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"/>
    </LinearLayout>



</LinearLayout>